# Simple-discord-Music-bot

./: CMakeLists.txt  README.md
cmake/: FindMpg123.cmake
src/: Bot_Token.h  embed.cpp  embed.h  main.cpp
